# Minder

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO  app  build.minder  cmake_install.cmake  com.github.phase1geo.Minder  com.github.phase1geo.minder.elementary.yml  com.github.phase1geo.minder.flathub.yml  com.github.phase1geo.minder.json  com.github.phase1geo.minder.yml  do  elementary-theme.patch  install_manifest.txt  meson.build  run-minder.c
.github/: FUNDING.yml
.github/workflows/: ci.yml  flatpak.yml  main.yml
data/: Application.css  Makefile  cmake_install.cmake  com.github.phase1geo.Minder.desktop  com.github.phase1geo.minder.appdata.xml  com.github.phase1geo.minder.appdata.xml.in  com.github.phase1geo.minder.desktop  com.github.phase1geo.minder.desktop.in  com.github.phase1geo.minder.gresource.xml  com.github.phase1geo.minder.gschema.xml  com.github.phase1geo.minder.shortcuts.ui  com.github.phase1geo.minder.xml  custom_sticker_readme.md  io.github.phase1geo.minder.appdata.xml  io.github.phase1geo.minder.appdata.xml.in  io.github.phase1geo.minder.desktop  io.github.phase1geo.minder.desktop.in  io.github.phase1geo.minder.gresource.xml  io.github.phase1geo.minder.gschema.xml  io.github.phase1geo.minder.xml  meson.build  outty
data/icons/flat-color-icons/: categories.xml  index.html
data/language-specs/: com.github.phase1geo.minder-markdown.lang  io.github.phase1geo.minder-markdown.lang
data/styles/: com.github.phase1geo.minder.xml  io.github.phase1geo.minder.color.xml  io.github.phase1geo.minder.none.xml
debian/: changelog  control  copyright  rules
elementary/: com.github.phase1geo.minder.yml  io.github.phase1geo.minder.yml
flathub/: com.github.phase1geo.minder.yml  io.github.phase1geo.minder.yml
meson/: post_install.py
po/: CMakeLists.txt  LINGUAS  Makefile  POTFILES  cmake_install.cmake  com.github.phase1geo.Minder.pot  com.github.phase1geo.minder.pot  cs.mo  cs.po  de.mo  de.po  es.po  eu.po  fr.po  io.github.phase1geo.minder.pot  it.po  ja.mo  ka.po  kg.mo  lt.mo  lv.mo  meson.build  nl.po  pl.mo  pl.po  pt.po  pt_BR.mo  pt_BR.po  ro.mo  ru.po  sk.mo  sl.mo  sv.po  uk.mo  zh_CN.po
po/extra/: LINGUAS  POTFILES  cs.po  es.po  extra.pot  fr.po  meson.build  pl.po  pt.po  pt_BR.po  ru.po
src/: About.vala  Animator.vala  Application.vala  BaseMenu.vala  Bezier.vala  Braindump.vala  Brainstorm.vala  Callout.vala  CalloutMenu.vala  CanvasText.vala  Clipboard.vala  Config.vala.in  Connection.vala  ConnectionInspector.vala  ConnectionMenu.vala  Connections.vala  ConnectionsMenu.vala  CurrentInspector.vala  DataDirUpdater.vala  Document.vala  DrawArea.vala  DrawAreaMenu.vala  DynamicNotebook.vala  EmptyInspector.vala  EmptyMenu.vala  Export.vala  Exporter.vala  Exports.vala  FileInspector.vala  FormattedText.vala  GroupInspector.vala  GroupsMenu.vala  HtmlToMarkdown.vala  ImageEditor.vala  ImageManager.vala  ImageMenu.vala  KeyCommands.vala  Layout.vala  Layouts.vala  Link.vala  (+98 more)
src/animator/: AnimatorAction.vala  AnimatorCallouts.vala  AnimatorFade.vala  AnimatorFold.vala  AnimatorNodeAlpha.vala  AnimatorNodes.vala  AnimatorNodesAlpha.vala  AnimatorPan.vala  AnimatorPanScale.vala  AnimatorPositions.vala  AnimatorScale.vala  AnimatorScaleInPlace.vala  meson.build
src/exports/: ExportCSV.vala  ExportFileSystem.vala  ExportFreemind.vala  ExportFreeplane.vala  ExportGraphML.vala  ExportImage.vala  ExportJPEG.vala  ExportMarkdown.vala  ExportMermaid.vala  ExportOPML.vala  ExportOrgMode.vala  ExportOutliner.vala  ExportPDF.vala  ExportPNG.vala  ExportPlantUML.vala  ExportPortableMinder.vala  ExportPrint.vala  ExportSVG.vala  ExportText.vala  ExportWebP.vala  ExportXMind.vala  ExportXMind2021.vala  ExportXMind8.vala  ExportYed.vala  meson.build
src/layouts/: .tkesort  LayoutDown.vala  LayoutHorizontal.vala  LayoutLeft.vala  LayoutManual.vala  LayoutRight.vala  LayoutUp.vala  LayoutVertical.vala  meson.build
src/links/: LinkCurved.vala  LinkSquared.vala  LinkStraight.vala
src/parsers/: MarkdownParser.vala  TaggerParser.vala  UnicodeParser.vala  UrlParser.vala  meson.build
src/styles/: LinkTypeCurved.vala  LinkTypeRounded.vala  LinkTypeSquared.vala  LinkTypeStraight.vala  NodeBorderBracket.vala  NodeBorderNone.vala  NodeBorderPill.vala  NodeBorderRounded.vala  NodeBorderSquared.vala  NodeBorderUnderlined.vala  meson.build
src/templates/: StyleTemplate.vala  meson.build
src/themes/: ThemeCustom.vala  ThemeDark.vala  ThemeDefault.vala  ThemeSolarizedDark.vala  ThemeSolarizedLight.vala  meson.build  theme_dark.c  theme_default.c
src/undo_actions/: UndoCalloutResize.vala  UndoCalloutText.vala  UndoConnectedNode.vala  UndoConnectionAdd.vala  UndoConnectionChange.vala  UndoConnectionColor.vala  UndoConnectionDelete.vala  UndoConnectionNote.vala  UndoConnectionStickerAdd.vala  UndoConnectionStickerChange.vala  UndoConnectionStickerRemove.vala  UndoConnectionTitle.vala  UndoConnectionsDelete.vala  UndoGroupAdd.vala  UndoGroupNote.vala  UndoGroupRemove.vala  UndoGroupsColor.vala  UndoGroupsMerge.vala  UndoGroupsRemove.vala  UndoNodeAddParent.vala  UndoNodeAttach.vala  UndoNodeBalance.vala  UndoNodeCallout.vala  UndoNodeCut.vala  UndoNodeDelete.vala  UndoNodeDetach.vala  UndoNodeFold.vala  UndoNodeFoldChanges.vala  UndoNodeFolds.vala  UndoNodeGroup.vala  UndoNodeImage.vala  UndoNodeInsert.vala  UndoNodeLayout.vala  UndoNodeLink.vala  UndoNodeLinkAdd.vala  UndoNodeLinkColor.vala  UndoNodeMove.vala  UndoNodeName.vala  UndoNodeNote.vala  UndoNodePaste.vala  (+79 more)
tests/: TEST.minder  assert.vala  meson.build  test-example.vala  test.vala  tests.vala
vapi/: libmarkdown.vapi  libmarkdown3.vapi  libwebp.vapi  mkdio.h  mkdio3.h
