sources += files(
    'animator/AnimatorAction.vala',
    'animator/AnimatorNodes.vala',
    'animator/AnimatorPan.vala',
    'animator/AnimatorPanScale.vala',
    'animator/AnimatorPositions.vala',
    'animator/AnimatorScale.vala',

    'exports/ExportCSV.vala',
    'exports/ExportFreemind.vala',
    'exports/ExportFreeplane.vala',
    'exports/ExportImage.vala',
    'exports/ExportMarkdown.vala',
    'exports/ExportMermaid.vala',
    'exports/ExportOPML.vala',
    'exports/ExportOutliner.vala',
    'exports/ExportPDF.vala',
    'exports/ExportPNG.vala',
    'exports/ExportPrint.vala',
    'exports/ExportSVG.vala',
    'exports/ExportText.vala',
    'exports/ExportYed.vala',

    'layouts/LayoutDown.vala',
    'layouts/LayoutHorizontal.vala',
    'layouts/LayoutLeft.vala',
    'layouts/LayoutManual.vala',
    'layouts/LayoutRight.vala',
    'layouts/LayoutUp.vala',
    'layouts/LayoutVertical.vala',

    'styles/LinkTypeCurved.vala',
    'styles/LinkTypeSquared.vala',
    'styles/LinkTypeStraight.vala',
    'styles/NodeBorderBracket.vala',
    'styles/NodeBorderNone.vala',
    'styles/NodeBorderPill.vala',
    'styles/NodeBorderRounded.vala',
    'styles/NodeBorderSquared.vala',
    'styles/NodeBorderUnderlined.vala',

    'themes/ThemeDark.vala',
    'themes/ThemeDefault.vala',
    'themes/ThemeSolarizedDark.vala',
    'themes/ThemeSolarizedLight.vala',

    'undo_actions/UndoConnectionAdd.vala',
    'undo_actions/UndoConnectionChange.vala',
    'undo_actions/UndoConnectionColor.vala',
    'undo_actions/UndoConnectionDelete.vala',
    'undo_actions/UndoConnectionNote.vala',
    'undo_actions/UndoConnectionTitle.vala',
    'undo_actions/UndoConnectionsDelete.vala',
    'undo_actions/UndoNodeAddParent.vala',
    'undo_actions/UndoNodeAttach.vala',
    'undo_actions/UndoNodeBalance.vala',
    'undo_actions/UndoNodeCut.vala',
    'undo_actions/UndoNodeDelete.vala',
    'undo_actions/UndoNodeDetach.vala',
    'undo_actions/UndoNodeFold.vala',
    'undo_actions/UndoNodeFoldChanges.vala',
    'undo_actions/UndoNodeImage.vala',
    'undo_actions/UndoNodeInsert.vala',
    'undo_actions/UndoNodeLayout.vala',
    'undo_actions/UndoNodeLink.vala',
    'undo_actions/UndoNodeLinkColor.vala',
    'undo_actions/UndoNodeMove.vala',
    'undo_actions/UndoNodeName.vala',
    'undo_actions/UndoNodeNote.vala',
    'undo_actions/UndoNodePaste.vala',
    'undo_actions/UndoNodeReparentLinkColor.vala',
    'undo_actions/UndoNodeResize.vala',
    'undo_actions/UndoNodeReveal.vala',
    'undo_actions/UndoNodeSort.vala',
    'undo_actions/UndoNodeTask.vala',
    'undo_actions/UndoNodesCut.vala',
    'undo_actions/UndoNodesDelete.vala',
    'undo_actions/UndoNodesFold.vala',
    'undo_actions/UndoNodesInsert.vala',
    'undo_actions/UndoNodesLink.vala',
    'undo_actions/UndoNodesLinkColor.vala',
    'undo_actions/UndoNodesRandLinkColor.vala',
    'undo_actions/UndoNodesReparentLinkColor.vala',
    'undo_actions/UndoStyleAffectChange.vala',
    'undo_actions/UndoStyleChange.vala',
    'undo_actions/UndoStyleConnectionArrow.vala',
    'undo_actions/UndoStyleConnectionDash.vala',
    'undo_actions/UndoStyleConnectionFont.vala',
    'undo_actions/UndoStyleConnectionPadding.vala',
    'undo_actions/UndoStyleConnectionWidth.vala',
    'undo_actions/UndoStyleLinkArrow.vala',
    'undo_actions/UndoStyleLinkDash.vala',
    'undo_actions/UndoStyleLinkType.vala',
    'undo_actions/UndoStyleLinkWidth.vala',
    'undo_actions/UndoStyleNodeBorder.vala',
    'undo_actions/UndoStyleNodeBorderwidth.vala',
    'undo_actions/UndoStyleNodeFill.vala',
    'undo_actions/UndoStyleNodeFont.vala',
    'undo_actions/UndoStyleNodeMargin.vala',
    'undo_actions/UndoStyleNodeMarkup.vala',
    'undo_actions/UndoStyleNodePadding.vala',

    'Animator.vala',
    'Application.vala',
    'Bezier.vala',
    'CanvasText.vala',
    'Connection.vala',
    'ConnectionInspector.vala',
    'ConnectionMenu.vala',
    'Connections.vala',
    'ConnectionsMenu.vala',
    'CurrentInspector.vala',
    'Document.vala',
    'DrawArea.vala',
    'DynamicNotebook.vala',
    'EmptyInspector.vala',
    'EmptyMenu.vala',
    'ImageEditor.vala',
    'ImageManager.vala',
    'Layout.vala',
    'Layouts.vala',
    'LinkDash.vala',
    'LinkType.vala',
    'MainWindow.vala',
    'MapInspector.vala',
    'Node.vala',
    'NodeBorder.vala',
    'NodeImage.vala',
    'NodeInspector.vala',
    'NodeMenu.vala',
    'NodesMenu.vala',
    'NoteView.vala',
    'Partitioner.vala',
    'QuickEntry.vala',
    'Selection.vala',
    'Style.vala',
    'StyleInspector.vala',
    'Styles.vala',
    'TextMenu.vala',
    'Theme.vala',
    'ThemeEditor.vala',
    'Themes.vala',
    'UndoBuffer.vala',
    'UndoItem.vala',
    'UrlEditor.vala',
    'UrlLinks.vala',
    'Utils.vala'
)
