sources += files(
    'animator/AnimatorAction.vala',
    'animator/AnimatorNodes.vala',
    'animator/AnimatorPan.vala',
    'animator/AnimatorPanScale.vala',
    'animator/AnimatorPositions.vala',
    'animator/AnimatorScale.vala',

    'exports/ExportCSV.vala',
    'exports/ExportFreemind.vala',
    'exports/ExportFreeplane.vala',
    'exports/ExportImage.vala',
    'exports/ExportMarkdown.vala',
    'exports/ExportMermaid.vala',
    'exports/ExportOPML.vala',
    'exports/ExportOrgMode.vala',
    'exports/ExportOutliner.vala',
    'exports/ExportPDF.vala',
    'exports/ExportPNG.vala',
    'exports/ExportPortableMinder.vala',
    'exports/ExportPrint.vala',
    'exports/ExportSVG.vala',
    'exports/ExportText.vala',
    'exports/ExportXMind.vala',
    'exports/ExportYed.vala',

    'layouts/LayoutDown.vala',
    'layouts/LayoutHorizontal.vala',
    'layouts/LayoutLeft.vala',
    'layouts/LayoutManual.vala',
    'layouts/LayoutRight.vala',
    'layouts/LayoutUp.vala',
    'layouts/LayoutVertical.vala',

    'parsers/MarkdownParser.vala',
    'parsers/TaggerParser.vala',
    'parsers/UrlParser.vala',

    'styles/LinkTypeCurved.vala',
    'styles/LinkTypeSquared.vala',
    'styles/LinkTypeStraight.vala',
    'styles/NodeBorderBracket.vala',
    'styles/NodeBorderNone.vala',
    'styles/NodeBorderPill.vala',
    'styles/NodeBorderRounded.vala',
    'styles/NodeBorderSquared.vala',
    'styles/NodeBorderUnderlined.vala',

    'themes/ThemeDark.vala',
    'themes/ThemeDefault.vala',
    'themes/ThemeSolarizedDark.vala',
    'themes/ThemeSolarizedLight.vala',

    'undo_actions/UndoConnectedNode.vala',
    'undo_actions/UndoConnectionAdd.vala',
    'undo_actions/UndoConnectionChange.vala',
    'undo_actions/UndoConnectionColor.vala',
    'undo_actions/UndoConnectionDelete.vala',
    'undo_actions/UndoConnectionNote.vala',
    'undo_actions/UndoConnectionStickerAdd.vala',
    'undo_actions/UndoConnectionStickerChange.vala',
    'undo_actions/UndoConnectionStickerRemove.vala',
    'undo_actions/UndoConnectionTitle.vala',
    'undo_actions/UndoConnectionsDelete.vala',

    'undo_actions/UndoGroupAdd.vala',
    'undo_actions/UndoGroupRemove.vala',

    'undo_actions/UndoGroupsColor.vala',
    'undo_actions/UndoGroupsMerge.vala',
    'undo_actions/UndoGroupsRemove.vala',

    'undo_actions/UndoNodeAddParent.vala',
    'undo_actions/UndoNodeAttach.vala',
    'undo_actions/UndoNodeBalance.vala',
    'undo_actions/UndoNodeCut.vala',
    'undo_actions/UndoNodeDelete.vala',
    'undo_actions/UndoNodeDetach.vala',
    'undo_actions/UndoNodeFold.vala',
    'undo_actions/UndoNodeFoldChanges.vala',
    'undo_actions/UndoNodeImage.vala',
    'undo_actions/UndoNodeInsert.vala',
    'undo_actions/UndoNodeLayout.vala',
    'undo_actions/UndoNodeLink.vala',
    'undo_actions/UndoNodeLinkColor.vala',
    'undo_actions/UndoNodeMove.vala',
    'undo_actions/UndoNodeName.vala',
    'undo_actions/UndoNodeNote.vala',
    'undo_actions/UndoNodePaste.vala',
    'undo_actions/UndoNodeReparentLinkColor.vala',
    'undo_actions/UndoNodeReplace.vala',
    'undo_actions/UndoNodeResize.vala',
    'undo_actions/UndoNodeReveal.vala',
    'undo_actions/UndoNodeSort.vala',
    'undo_actions/UndoNodeStickerAdd.vala',
    'undo_actions/UndoNodeStickerChange.vala',
    'undo_actions/UndoNodeStickerRemove.vala',
    'undo_actions/UndoNodeTask.vala',

    'undo_actions/UndoNodesAlign.vala',
    'undo_actions/UndoNodesCut.vala',
    'undo_actions/UndoNodesDelete.vala',
    'undo_actions/UndoNodesFold.vala',
    'undo_actions/UndoNodesGroup.vala',
    'undo_actions/UndoNodesInsert.vala',
    'undo_actions/UndoNodesLink.vala',
    'undo_actions/UndoNodesLinkColor.vala',
    'undo_actions/UndoNodesRandLinkColor.vala',
    'undo_actions/UndoNodesReparentLinkColor.vala',
    'undo_actions/UndoNodesReplace.vala',

    'undo_actions/UndoStickerAdd.vala',
    'undo_actions/UndoStickerChange.vala',
    'undo_actions/UndoStickerMove.vala',
    'undo_actions/UndoStickerRemove.vala',
    'undo_actions/UndoStickerResize.vala',

    'undo_actions/UndoStyleAffectChange.vala',
    'undo_actions/UndoStyleBranchMargin.vala',
    'undo_actions/UndoStyleChange.vala',
    'undo_actions/UndoStyleConnectionArrow.vala',
    'undo_actions/UndoStyleConnectionDash.vala',
    'undo_actions/UndoStyleConnectionFont.vala',
    'undo_actions/UndoStyleConnectionLineWidth.vala',
    'undo_actions/UndoStyleConnectionPadding.vala',
    'undo_actions/UndoStyleConnectionTitleWidth.vala',
    'undo_actions/UndoStyleLinkArrow.vala',
    'undo_actions/UndoStyleLinkDash.vala',
    'undo_actions/UndoStyleLinkType.vala',
    'undo_actions/UndoStyleLinkWidth.vala',
    'undo_actions/UndoStyleNodeBorder.vala',
    'undo_actions/UndoStyleNodeBorderwidth.vala',
    'undo_actions/UndoStyleNodeFill.vala',
    'undo_actions/UndoStyleNodeFont.vala',
    'undo_actions/UndoStyleNodeMargin.vala',
    'undo_actions/UndoStyleNodeMarkup.vala',
    'undo_actions/UndoStyleNodePadding.vala',
    'undo_actions/UndoStyleNodeWidth.vala',

    'undo_actions/UndoTextClearTags.vala',
    'undo_actions/UndoTextDelete.vala',
    'undo_actions/UndoTextInsert.vala',
    'undo_actions/UndoTextMultiInsert.vala',
    'undo_actions/UndoTextReplace.vala',
    'undo_actions/UndoTextTagAdd.vala',
    'undo_actions/UndoTextTagRemove.vala',

    'Animator.vala',
    'Application.vala',
    'Bezier.vala',
    'CanvasText.vala',
    'Clipboard.vala',
    'Connection.vala',
    'ConnectionInspector.vala',
    'ConnectionMenu.vala',
    'Connections.vala',
    'ConnectionsMenu.vala',
    'CurrentInspector.vala',
    'Document.vala',
    'DrawArea.vala',
    'DynamicNotebook.vala',
    'EmptyInspector.vala',
    'EmptyMenu.vala',
    'FormattedText.vala',
    'GroupsMenu.vala',
    'HtmlToMarkdown.vala',
    'ImageEditor.vala',
    'ImageManager.vala',
    'Layout.vala',
    'Layouts.vala',
    'LinkDash.vala',
    'LinkType.vala',
    'MainWindow.vala',
    'MapInspector.vala',
    'Node.vala',
    'NodeAlign.vala',
    'NodeBorder.vala',
    'NodeGroup.vala',
    'NodeGroups.vala',
    'NodeImage.vala',
    'NodeInspector.vala',
    'NodeMenu.vala',
    'NodesMenu.vala',
    'NoteView.vala',
    'Partitioner.vala',
    'QuickEntry.vala',
    'Selection.vala',
    'Sticker.vala',
    'Stickers.vala',
    'StickerInspector.vala',
    'Style.vala',
    'StyleInspector.vala',
    'Styles.vala',
    'Tagger.vala',
    'TextCompletion.vala',
    'TextMenu.vala',
    'TextParser.vala',
    'Theme.vala',
    'ThemeEditor.vala',
    'Themes.vala',
    'UndoBuffer.vala',
    'UndoItem.vala',
    'UndoTextBuffer.vala',
    'UndoTextItem.vala',
    'UrlEditor.vala',
    'Utils.vala'
)
