sources += files(
    'About.vala',
    'Animator.vala',
    'Application.vala',
    'Bezier.vala',
    'Callout.vala',
    'CalloutMenu.vala',
    'CanvasText.vala',
    'Clipboard.vala',
    'Connection.vala',
    'ConnectionInspector.vala',
    'ConnectionMenu.vala',
    'Connections.vala',
    'ConnectionsMenu.vala',
    'CurrentInspector.vala',
    'Document.vala',
    'DrawArea.vala',
    'DynamicNotebook.vala',
    'EmptyInspector.vala',
    'EmptyMenu.vala',
    'Export.vala',
    'Exporter.vala',
    'Exports.vala',
    'FormattedText.vala',
    'GroupInspector.vala',
    'GroupsMenu.vala',
    'HtmlToMarkdown.vala',
    'ImageEditor.vala',
    'ImageManager.vala',
    'Layout.vala',
    'Layouts.vala',
    'LinkDash.vala',
    'LinkType.vala',
    'MainWindow.vala',
    'MapInspector.vala',
    'Node.vala',
    'NodeAlign.vala',
    'NodeBorder.vala',
    'NodeGroup.vala',
    'NodeGroups.vala',
    'NodeImage.vala',
    'NodeInspector.vala',
    'NodeLink.vala',
    'NodeLinks.vala',
    'NodeMenu.vala',
    'NodesMenu.vala',
    'NoteView.vala',
    'Partitioner.vala',
    'Preferences.vala',
    'QuickEntry.vala',
    'Selection.vala',
    'SequenceNum.vala',
    'Sticker.vala',
    'Stickers.vala',
    'StickerInspector.vala',
    'StickerSet.vala',
    'Style.vala',
    'StyleInspector.vala',
    'Styles.vala',
    'SummaryNode.vala',
    'Tagger.vala',
    'TextCompletion.vala',
    'TextMenu.vala',
    'TextParser.vala',
    'Theme.vala',
    'ThemeEditor.vala',
    'Themes.vala',
    'UndoBuffer.vala',
    'UndoItem.vala',
    'UndoTextBuffer.vala',
    'UndoTextItem.vala',
    'UnicodeInsert.vala',
    'UrlEditor.vala',
    'Utils.vala',
    'ZoomWidget.vala'
)

subdir('animator')
subdir('exports')
subdir('layouts')
subdir('parsers')
subdir('styles')
subdir('themes')
subdir('undo_actions')
