sources += files(
    'AnimatorAction.vala',
    'AnimatorCallouts.vala',
    'AnimatorFade.vala',
    'AnimatorFold.vala',
    'AnimatorNodeAlpha.vala',
    'AnimatorNodes.vala',
    'AnimatorPan.vala',
    'AnimatorPanScale.vala',
    'AnimatorPositions.vala',
    'AnimatorScale.vala',
    'AnimatorScaleInPlace.vala',
)
