sources += files(
    'AnimatorAction.vala',
    'AnimatorCallouts.vala',
    'AnimatorFade.vala',
    'AnimatorFold.vala',
    'AnimatorNodes.vala',
    'AnimatorNodesAlpha.vala',
    'AnimatorPan.vala',
    'AnimatorPanScale.vala',
    'AnimatorPositions.vala',
    'AnimatorScale.vala',
    'AnimatorScaleInPlace.vala',
)
