sources += files(
    'ExportCSV.vala',
    'ExportFileSystem.vala',
    'ExportFreemind.vala',
    'ExportFreeplane.vala',
    'ExportImage.vala',
    'ExportMarkdown.vala',
    'ExportMermaid.vala',
    'ExportOPML.vala',
    'ExportOrgMode.vala',
    'ExportOutliner.vala',
    'ExportPDF.vala',
    'ExportPlantUML.vala',
    'ExportPNG.vala',
    'ExportPortableMinder.vala',
    'ExportPrint.vala',
    'ExportSVG.vala',
    'ExportText.vala',
    'ExportXMind8.vala',
    'ExportXMind2021.vala',
    'ExportYed.vala',
)
