sources += files(
    'LinkTypeCurved.vala',
    'LinkTypeRounded.vala',
    'LinkTypeSquared.vala',
    'LinkTypeStraight.vala',
    'NodeBorderBracket.vala',
    'NodeBorderNone.vala',
    'NodeBorderPill.vala',
    'NodeBorderRounded.vala',
    'NodeBorderSquared.vala',
    'NodeBorderUnderlined.vala',
)
